samples/_failures_safe/1761319721_244df6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_236ca10b.c: In function ‘print_token’:
./samples/SAFE/__tmp_236ca10b.c:169:12: error: ‘type’ undeclared (first use in this function)
  169 |            type
      |            ^~~~
./samples/SAFE/__tmp_236ca10b.c:169:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_236ca10b.c:169:16: error: expected ‘)’ at end of input
  169 |            type
      |                ^
      |                )
./samples/SAFE/__tmp_236ca10b.c:167:11: note: to match this ‘(’
  167 |     printf("Line %d, Column %d: %s '%s'\n",
      |           ^
./samples/SAFE/__tmp_236ca10b.c:169:12: error: expected declaration or statement at end of input
  169 |            type
      |            ^~~~
